# ikrs

./: .gitignore  Cargo.toml  README.md  ikrs
docs/architecture/: error_handling.md  inference.md
examples/: add.ik  cast.ik  enum_simple.ik  enums.ik  fib.ik  fib_recursive.ik  func_struct.ik  func_with_typeclass.ik  generics.ik  id_function.ik  instance_with_predicates.ik  lambda.ik  linked_list.ik  list_generics.ik  list_generics_infered.ik  mvp.ik  odd_even.ik  shadowed.ik  structs.ik
examples/errors/: bad_tokens.ik  insufficiently_general_assignment.ik  parse_error.ik  type_error1.ik
examples/errors/multi-file/parse_errors/: hello.ik  main.ik
examples/errors/multi-file/parse_errors/pkg1/inner1/: inner.ik
examples/errors/multi-file/parse_errors/pkg2/: bar.ik  foo.ik
examples/multi-file/eg1/: hello.ik  main.ik
examples/multi-file/eg1/pkg1/: package1.ik
examples/multi-file/import-cycle/: main.ik
examples/multi-file/import-cycle/pkg1/: pkg1.ik
examples/multi-file/import-cycle/pkg2/: pkg2.ik
examples/projecteuler/: 3.ik
examples/todo/: nested_struct.ik
src/: args.rs  compiler.rs  main.rs  package.rs
src/compiler/: first_pass.rs  test.rs
src/inference/: mod.rs  test.rs
src/parser/: ast.rs  location.rs  mod.rs  parser.rs  test_helper.rs  tokenize.rs  tokens.rs
src/parser/parser/: test.rs
src/util/: graph.rs  indexed.rs  mod.rs
tools/: gen_benchmark.py
