[package]
name = "ikrs"
version = "0.1.0"
authors = ["Jeremy Mikkola <jeremy@jeremymikkola.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
walkdir = "2"

[dev-dependencies]
regex = "1"
tempdir = "0.3"
